# LiveCaption

./: .gitignore  AGENTS.md  README.md
.github/workflows/: codeql.yml  dependency-review.yml  deploy-relay-functions.yml  portal-build.yml
Portal/: .swiftlint.yml  Podfile
Portal/LiveCaptionPortal/: ContentView+EnvironmentTransfer.swift  ContentView+Previews.swift  ContentView+Relay.swift  ContentView+Session.swift  ContentView+Speech.swift  ContentView+SubtitleExport.swift  ContentView.swift  L10n.swift  LegacySpeechSettingsConfiguration.swift  LiveCaptionPortalApp.swift  PortalEnvironmentSettingsConfigurationFile.swift  PortalLaunchVerifier.swift  PortalWorkflowLog.swift
Portal/LiveCaptionPortal.xcodeproj/: project.pbxproj
Portal/LiveCaptionPortal.xcworkspace/: contents.xcworkspacedata
Relay/: .funcignore  README.md  function_app.py  local.settings.sample.json  pyproject.toml  requirements.txt
Relay/infra/: main.bicep  prod.example.bicepparam  speech-role-assignment.bicep
Relay/infra/automation/: switch-livecaption-sku.ps1
Relay/src/relay/: __init__.py  auth.py  control_state.py  http.py  models.py  speech_keys.py  validation.py  viewer_access.py  webpubsub.py
Relay/tests/: test_auth.py  test_control_state.py  test_http.py  test_speech_keys.py  test_validation.py  test_viewer_access.py  test_webpubsub.py
docs/adr/: 0001-github-actions-oidc-relay-functions-deployment.md  0003-portal-caption-quality-modes.md  0004-viewer-single-websocket-control-events.md
docs/api/: caption-events.md  health.md  portal-negotiate.md  viewer-negotiate.md  (+1 more)
(+74 files in other folders)
