[project]
name = "livecaption-relay"
version = "0.1.0"
description = "Relay backend for LiveCaption caption events."
requires-python = ">=3.13"
dependencies = [
    "azure-functions",
    "azure-functions-runtime",
    "azure-identity",
    "azure-mgmt-cognitiveservices",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
